fix: Bug fixing
Signed-off-by: antoine-bryer <abryer@nextoo.fr>

--- a/technical-test-api/src/main/resources/application.yml
+++ b/technical-test-api/src/main/resources/application.yml
@@ -1,11 +1,9 @@
 spring:
   application:
     name: technical-test-api
-  main:
-    web-application-type: servlet
   data:
     mongodb:
-      database: auchan-tech-test
+      uri: mongodb://localhost:27017/auchan-tech-test
 
 server:
   port: 8086
