--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,5 +8,16 @@ services:
       MONGO_INITDB_DATABASE: auchan-tech-test
     volumes:
       - mongodb-data:/data
+
+  mongo-express:
+    image: mongo-express:latest
+    container_name: mongo-express
+    ports:
+      - "8081:8081"
+    environment:
+      ME_CONFIG_MONGODB_URL: mongodb://mongodb:27017/
+      ME_CONFIG_BASICAUTH: "false"
+    depends_on:
+      - mongodb
 volumes:
   mongodb-data: {}
