--- a/technical-test-api/src/main/resources/application.yml
+++ b/technical-test-api/src/main/resources/application.yml
@@ -7,3 +7,9 @@ spring:
 
 server:
   port: 8086
+
+logging:
+  level:
+    root: INFO
+    technical.test.api.services: DEBUG
+    org.springframework: INFO
