feat(api/front): Create new flights
Signed-off-by: antoine-bryer <abryer@nextoo.fr>

--- a/technical-test-renderer/src/main/resources/application.yml
+++ b/technical-test-renderer/src/main/resources/application.yml
@@ -12,4 +12,5 @@ webclient:
       url: http://localhost:${webclient.api.technical.port}
       base-path: /
       flight-path: /flight
+      airport-path: /airport
 
